# devdays-2023

./: .gitignore  README.md  base.py  custom.py  main.py  mcode.py  pyproject.toml  r4.py  requirements.txt
.devcontainer/: devcontainer.json
mcode/: StructureDefinition-mcode-body-location-qualifier.json  StructureDefinition-mcode-body-structure-identifier.json  StructureDefinition-mcode-cancer-disease-status-evidence-type.json  StructureDefinition-mcode-cancer-disease-status.json  StructureDefinition-mcode-cancer-patient.json  StructureDefinition-mcode-cancer-related-medication-administration.json  StructureDefinition-mcode-cancer-related-medication-request.json  StructureDefinition-mcode-cancer-related-surgical-procedure.json  StructureDefinition-mcode-cancer-stage-group.json  StructureDefinition-mcode-comorbid-condition-code.json  StructureDefinition-mcode-comorbid-condition-reference.json  StructureDefinition-mcode-comorbidities-elixhauser.json  StructureDefinition-mcode-comorbidities-parent.json  StructureDefinition-mcode-ecog-performance-status.json  StructureDefinition-mcode-genomic-region-studied.json  StructureDefinition-mcode-genomic-specimen.json  StructureDefinition-mcode-genomic-variant.json  StructureDefinition-mcode-genomics-report.json  StructureDefinition-mcode-histology-morphology-behavior.json  StructureDefinition-mcode-karnofsky-performance-status.json  StructureDefinition-mcode-laterality-qualifier.json  StructureDefinition-mcode-patient-bundle.json  StructureDefinition-mcode-patient-group.json  StructureDefinition-mcode-primary-cancer-condition.json  (+19 more)
(+25 files in other folders)
